# NaI-Cs137

./: CMakeLists.txt  README.md  activity_mode.mac  normal_mode.mac  plot_spectrum.py  run.mac  test_mode.mac  vis.mac  vis_test.mac
background/: RS250_19207_20170218_135001_BG.xml  plot_xml_spectrum.py
data/: .~lock.calculation.xlsx#  calculation.xlsx  plot_results.py
data/100Bqm3_3720s/: nai_simulation_h1_EnergySpectrum.csv  nai_simulation_nt_GammaSpectrum.csv  output.txt
data/10Bqm3_3720s/: nai_simulation_h1_EnergySpectrum.csv  nai_simulation_nt_GammaSpectrum.csv  output.txt
data/20Bqm3_3720s/: nai_simulation_h1_EnergySpectrum.csv  nai_simulation_h1_EnergySpectrum_zoom.csv  nai_simulation_nt_GammaSpectrum.csv  output.txt
data/30Bqm3_3720s/: nai_simulation_h1_EnergySpectrum.csv  nai_simulation_h1_EnergySpectrum_zoom.csv  nai_simulation_nt_GammaSpectrum.csv  output.txt  plot_spectrum.py
data/40Bqm3_3720s/: nai_simulation_h1_EnergySpectrum.csv  nai_simulation_h1_EnergySpectrum_zoom.csv  nai_simulation_nt_GammaSpectrum.csv  output.txt
data/50Bqm3_3720s/: nai_simulation_h1_EnergySpectrum.csv  nai_simulation_h1_EnergySpectrum_zoom.csv  nai_simulation_nt_GammaSpectrum.csv  output.txt
include/: DetectorConstruction.hh  EventAction.hh  PhysicsList.hh  PrimaryGeneratorAction.hh  PrimaryGeneratorMessenger.hh  RunAction.hh  SteppingAction.hh
src/: DetectorConstruction.cc  EventAction.cc  PhysicsList.cc  PrimaryGeneratorAction.cc  PrimaryGeneratorMessenger.cc  RunAction.cc  SteppingAction.cc  main.cpp
